# Codai

./: .env.example  .gitignore  AUTHORS  BRANDING.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  SETUP_GUIDE.md  package.json  pyproject.toml  readme.md  requirements.txt  run_server.py  setup-electron.bat  setup-electron.ps1  setup-electron.sh  setup.bat  setup.ps1  setup.sh
.github/: FUNDING.yml
Docs/: ELECTRON.md
Docs/Architecture/: BACKEND_FLOW.md  FRONTEND_FLOW.md
build-resources/: entitlements.mac.plist
config/: app.yaml  base.yaml  local.yaml.example  logging.yaml  maintenance.yaml  structured_prompts.yaml
config/environments/: development.yaml  production.yaml
core/: __init__.py  api_client.py  config_manager.py  configuration.py  development.py  types.py
core/api/: __init__.py  client.py  conversation_summarizer.py  expert_mode.py  handlers.py  logging.py  processors.py  schema_prompt_generator.py  utils.py  (+1 more)
debug/: __init__.py  debug_logger.py
electron/: build-python.js  main.js  preload.js
frontend/: jest.config.js  jest.setup.js  next.config.js  package.json  tailwind.config.ts
server/: __init__.py  app.py  logging.py  reload_handler.py
setup/: __init__.py  __main__.py  backend.py  cli.py  config.py  demo.py  environment.py  fixed_check_prerequisites.py  frontend.py  logging_config.py  orchestrator.py  ports.py  requirements.py  resilience.py  theme.py  troubleshooter.py  utils.py  validation.py
tools/: __init__.py  analyze_thinking_budget.py  base.py  bash.py  collection.py  computer.py  logging_utils.py  run.py
(+395 files in other folders)
