[tool.poetry]
name = "codai"
version = "0.1.0"
description = "CODAI - Evolved Intelligence. Turn ideas into production-ready apps and solutions. Zero code required."
authors = ["Arian Rudd"]
readme = "README.md"
license = "GPL-3.0-or-later"
homepage = "https://codai.ai"
repository = "https://github.com/thecodai/Codai"
documentation = "https://codai.ai/docs"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
anthropic = "*"
fastapi = ">=0.109.1"
uvicorn = "*"
rich = "*"
pydantic = "*"
python-multipart = "*"
pyautogui = "*"
requests = "*"
pillow = "*"
pyyaml = ">=6.0.1"
psutil = ">=5.9.0"
colorama = ">=0.4.6"
python-json-logger = ">=2.0.7"
watchfiles = ">=0.21.0"
python-dotenv = "^1.0.1"
aiohttp = ">=3.8.4"
beautifulsoup4 = ">=4.12.0"
brotli = ">=1.0.9"
selenium = ">=4.16.0"
webdriver-manager = ">=4.0.1"
chardet = ">=5.1.0"
sqlalchemy = ">=2.0.0"
cryptography = ">=41.0.0"
pywin32 = {version = ">=306", markers = "sys_platform == 'win32'"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
